Bug 192912 - Plasma crash during login
Summary: Plasma crash during login
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR crash
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 192635 192936 192951 193061 194188 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-05-16 18:54 UTC by James Colby
Modified: 2009-05-27 20:13 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description James Colby 2009-05-16 18:54:27 UTC
Application that crashed: plasma-desktop
Version of the application: 0.3
KDE Version: 4.2.86 (KDE 4.2.86 (KDE 4.3 >= 20090514))
Qt Version: 4.5.1
Operating System: Linux 2.6.27.21-0.1-default i686

What I was doing when the application crashed:
Plasma is crashing during login.  This is from the SVN built using kdesvn-build.  I have tried removing my $KDEHOME, but that does not help.

 -- Backtrace:
Application: Plasma Workspace (kdeinit), signal: Segmentation fault
[KCrash Handler]
#6  0xb800788c in QObject::setParent (this=0x0, parent=0x81f1478) at /home/jcolby/kdesvn/kdesvn-src/qt-copy/src/corelib/kernel/qobject.cpp:1841
#7  0xb6135cc9 in Plasma::Containment::setWallpaper (this=0x81f1478, pluginName=@0xbfdc7a98, mode=@0xbfdc7a94) at /home/jcolby/kdesvn/kdesvn-src/kdelibs/plasma/containment.cpp:1460
#8  0xb6135fb8 in Plasma::Containment::setDrawWallpaper (this=0x81f1478, drawWallpaper=true) at /home/jcolby/kdesvn/kdesvn-src/kdelibs/plasma/containment.cpp:1426
#9  0xb6137e2d in Plasma::Containment::init (this=0x81f1478) at /home/jcolby/kdesvn/kdesvn-src/kdelibs/plasma/containment.cpp:209
#10 0xb61426c8 in Plasma::Corona::loadLayout (this=0x80bc390, configName=@0xbfdc7d74) at /home/jcolby/kdesvn/kdesvn-src/kdelibs/plasma/corona.cpp:367
#11 0xb61442e1 in Plasma::Corona::initializeLayout (this=0x80bc390, configName=@0xbfdc7d74) at /home/jcolby/kdesvn/kdesvn-src/kdelibs/plasma/corona.cpp:323
#12 0xb41ea390 in PlasmaApp::corona (this=0x80b7078) at /home/jcolby/kdesvn/kdesvn-src/kdebase/workspace/plasma/shells/desktop/plasmaapp.cpp:517
#13 0xb41ea50b in PlasmaApp::setupDesktop (this=0x80b7078) at /home/jcolby/kdesvn/kdesvn-src/kdebase/workspace/plasma/shells/desktop/plasmaapp.cpp:211
#14 0xb41ee580 in PlasmaApp::qt_metacall (this=0x80b7078, _c=QMetaObject::InvokeMetaMethod, _id=5, _a=0xbfdc7ea8)
    at /home/jcolby/kdesvn/kdesvn-src/build/kdebase/workspace/plasma/shells/desktop/plasmaapp.moc:108
#15 0xb800ba68 in QMetaObject::activate (sender=0x8186968, from_signal_index=4, to_signal_index=4, argv=0x0) at /home/jcolby/kdesvn/kdesvn-src/qt-copy/src/corelib/kernel/qobject.cpp:3117
#16 0xb800c032 in QMetaObject::activate (sender=0x8186968, m=0xb80a29e8, local_signal_index=0, argv=0x0) at /home/jcolby/kdesvn/kdesvn-src/qt-copy/src/corelib/kernel/qobject.cpp:3194
#17 0xb8012547 in QSingleShotTimer::timeout (this=0x8186968) at .moc/release-shared/qtimer.moc:76
#18 0xb801266c in QSingleShotTimer::timerEvent (this=0x8186968) at /home/jcolby/kdesvn/kdesvn-src/qt-copy/src/corelib/kernel/qtimer.cpp:298
#19 0xb800881f in QObject::event (this=0x8186968, e=0xbfdc833c) at /home/jcolby/kdesvn/kdesvn-src/qt-copy/src/corelib/kernel/qobject.cpp:1082
#20 0xb6c3f49c in QApplicationPrivate::notify_helper (this=0x80bd4b8, receiver=0x8186968, e=0xbfdc833c) at /home/jcolby/kdesvn/kdesvn-src/qt-copy/src/gui/kernel/qapplication.cpp:4057
#21 0xb6c47e0e in QApplication::notify (this=0x80b7078, receiver=0x8186968, e=0xbfdc833c) at /home/jcolby/kdesvn/kdesvn-src/qt-copy/src/gui/kernel/qapplication.cpp:3604
#22 0xb759464d in KApplication::notify (this=0x80b7078, receiver=0x8186968, event=0xbfdc833c) at /home/jcolby/kdesvn/kdesvn-src/kdelibs/kdeui/kernel/kapplication.cpp:307
#23 0xb7ff951b in QCoreApplication::notifyInternal (this=0x80b7078, receiver=0x8186968, event=0xbfdc833c) at /home/jcolby/kdesvn/kdesvn-src/qt-copy/src/corelib/kernel/qcoreapplication.cpp:606
#24 0xb8022e01 in QTimerInfoList::activateTimers (this=0x80bdc0c) at ../../include/QtCore/../../../../qt-copy/src/corelib/kernel/qcoreapplication.h:213
#25 0xb802307b in QEventDispatcherUNIX::processEvents (this=0x80b8740, flags={i = -1076066900}) at /home/jcolby/kdesvn/kdesvn-src/qt-copy/src/corelib/kernel/qeventdispatcher_unix.cpp:908
#26 0xb6ccf9a6 in QEventDispatcherX11::processEvents (this=0x80b8740, flags={i = -1076066840}) at /home/jcolby/kdesvn/kdesvn-src/qt-copy/src/gui/kernel/qeventdispatcher_x11.cpp:152
#27 0xb7ff7caa in QEventLoop::processEvents (this=0xbfdc8650, flags={i = -1076066776}) at /home/jcolby/kdesvn/kdesvn-src/qt-copy/src/corelib/kernel/qeventloop.cpp:149
#28 0xb7ff7e6a in QEventLoop::exec (this=0xbfdc8650, flags={i = -1076066728}) at /home/jcolby/kdesvn/kdesvn-src/qt-copy/src/corelib/kernel/qeventloop.cpp:196
#29 0xb7ffa011 in QCoreApplication::exec () at /home/jcolby/kdesvn/kdesvn-src/qt-copy/src/corelib/kernel/qcoreapplication.cpp:888
#30 0xb6c3f317 in QApplication::exec () at /home/jcolby/kdesvn/kdesvn-src/qt-copy/src/gui/kernel/qapplication.cpp:3526
#31 0xb41d3a20 in kdemain (argc=1, argv=0x805d790) at /home/jcolby/kdesvn/kdesvn-src/kdebase/workspace/plasma/shells/desktop/main.cpp:50
#32 0x0804e2c4 in launch (argc=1, _name=0x809f2a4 "/home/jcolby/kdesvn/kde/bin/plasma-desktop", args=0x809f2cf "", cwd=0x0, envc=0, envs=0x809f2d3 "", reset_env=false, tty=0x0, avoid_loops=false, 
    startup_id_str=0x80510ca "0") at /home/jcolby/kdesvn/kdesvn-src/kdelibs/kinit/kinit.cpp:667
#33 0x0804ea6d in handle_launcher_request (sock=7, who=<value optimized out>) at /home/jcolby/kdesvn/kdesvn-src/kdelibs/kinit/kinit.cpp:1159
#34 0x0804eecb in handle_requests (waitForPid=0) at /home/jcolby/kdesvn/kdesvn-src/kdelibs/kinit/kinit.cpp:1352
#35 0x0804f6e9 in main (argc=2, argv=0xbfdc8ec4, envp=0xbfdc8ed0) at /home/jcolby/kdesvn/kdesvn-src/kdelibs/kinit/kinit.cpp:1779
Comment 1 Dario Andres 2009-05-16 21:41:22 UTC
*** Bug 192635 has been marked as a duplicate of this bug. ***
Comment 2 Dario Andres 2009-05-16 23:23:56 UTC
*** Bug 192936 has been marked as a duplicate of this bug. ***
Comment 3 Dario Andres 2009-05-17 03:21:32 UTC
*** Bug 192951 has been marked as a duplicate of this bug. ***
Comment 4 Dario Andres 2009-05-17 03:25:17 UTC
Just a guess:
"d->wallpaper->setParent(this);" should be called after the "if (d->wallpaper) {" check....
Comment 5 Dario Andres 2009-05-17 20:23:31 UTC
SVN commit 969230 by darioandres:

Call setParent() after the m_wallpaper pointer check

BUG: 192912


 M  +1 -1      containment.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=969230
Comment 6 Dario Andres 2009-05-18 01:27:49 UTC
*** Bug 193061 has been marked as a duplicate of this bug. ***
Comment 7 Aaron J. Seigo 2009-05-27 20:13:06 UTC
*** Bug 194188 has been marked as a duplicate of this bug. ***