Call setParent() after the m_wallpaper pointer check

BUG: 192912

svn path=/trunk/KDE/kdelibs/; revision=969230